--- a/templates/second.html
+++ b/templates/second.html
@@ -9,11 +9,11 @@
 	</head>
 
 <body>
-    <br><br><div align="center"><h1>研磨機 維修紀錄</h1></div>
+    <br><br><div align="center"><h1>射出成形機 調機</h1></div>
 
-    <div align="center"><h2>維修原因</h2></div>
+    <div align="center"><h2>機台 001A</h2></div>
 
-	<div align="center"><h3>流程卡 {{serial_num}}</h3></div><br>
+	<div align="center"><h3>工單編號 {{serial_num}}</h3></div><br>
 	
 	<form method="post" id="info">
 		<div align="center">
